# AviUtl2_ColorLUT_K_Plugin

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  THIRD_PARTY_LICENSES.md  astra.toml
.github/workflows/: releaser.yml
samples/: README.md
src/: .clang-format  CMakeLists.txt  apply.cpp  apply.hpp  baker.cpp  baker.hpp  blend.cpp  blend.hpp  common.hpp  exporter.cpp  exporter.hpp  filter.cpp  filter.hpp  identity.cpp  identity.hpp  importer.cpp  importer.hpp  lut.cpp  lut.hpp  main.cpp  main.def  pixel.hpp  shader.hpp  utility.hpp
src/cmake/: CompileShaders.cmake
src/core/: blend.cpp  lut.cpp  lut.hpp  pixel.hpp  shader.hpp  utility.hpp
src/filter/: CMakeLists.txt  filter.hpp
src/filter/intern/: cache.hpp  filter.cpp  identity.cpp  identity.hpp  transform.cpp  transform.hpp
src/filter/intern/shaders/: blend.hlsli  identity.cs.hlsl  identity.hlsl  lut1d.hlsl  lut3d.hlsl
src/intern/: blend.hpp  lut.cpp  lut.hpp  pixel.hpp  utilities.hpp  utility.hpp
src/intern/direct3d/: CMakeLists.txt  direct3d.hpp
src/intern/direct3d/intern/: direct3d.cpp
src/intern/direct3d/intern/shaders/: blit.hlsl  fullscreen.hlsl
src/intern/lut/: CMakeLists.txt  lut.hpp
src/intern/lut/intern/: lut.cpp
src/intern/pixel/: CMakeLists.txt  pixel.hpp
src/intern/pixel/intern/: pixel.cpp
src/intern/wic/: CMakeLists.txt  wic.hpp
src/intern/wic/intern/: wic.cpp
src/io/: CMakeLists.txt  io.hpp
src/io/intern/: exporter.cpp  exporter.hpp  importer.cpp  importer.hpp  io.cpp
src/shaders/: blend.ps.hlsl  identity.hlsl
